<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wearlauncher="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/transport"
    android:orientation="vertical">
        
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <com.sczn.wearlauncher.view.status.BatteryIcon
	        android:id="@+id/status_battery"
	        style="@style/style_status_icon_contain"
	        wearlauncher:stringId="@string/status_battery"
	        wearlauncher:imageId="@drawable/statu_icon_mode_on"/>
	    <com.sczn.wearlauncher.view.status.SimIcon
	        android:id="@+id/status_sim"
	        style="@style/style_status_icon_contain"
	        wearlauncher:stringId="@string/status_sim"
	        wearlauncher:imageId="@drawable/statu_icon_sim_0"/>
    </LinearLayout>  
        
    <View 
        android:layout_width="1dp"
        android:layout_height="@dimen/status_icon_horizontal_gap"/>
        
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            
        <com.sczn.wearlauncher.view.status.BtIcon
		    android:id="@+id/status_bt"
		    style="@style/style_status_icon_contain"
		    wearlauncher:stringId="@string/status_bt"
		    wearlauncher:imageId="@drawable/statu_icon_bt_off"/>
		<com.sczn.wearlauncher.view.status.WifiIcon
		    android:id="@+id/status_wifi"
		    style="@style/style_status_icon_contain"
		    wearlauncher:stringId="@string/status_wifi"
		    wearlauncher:imageId="@drawable/statu_icon_wifi_off"/> 
    </LinearLayout> 
</LinearLayout>
