<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg">
	  
    <ImageView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:contentDescription="@string/app_name"
        android:src="@drawable/sleep_circle"/>
    
    <LinearLayout 
        android:layout_marginTop="@dimen/healthalarm_card_padding_top"
        android:layout_width="@dimen/card_circle_square_size"
        android:layout_height="@dimen/card_circle_square_size"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:orientation="horizontal">
            <com.sczn.wearlauncher.view.card.CardFragmentTextView
                android:id="@+id/total_hours_text" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/normal_text"
                android:textSize="24sp"/>
            <com.sczn.wearlauncher.view.card.CardFragmentTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/sleep_hours_unit"/>
            <com.sczn.wearlauncher.view.card.CardFragmentTextView
                android:id="@+id/sleep_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sleep_state_normal"
                android:textSize="15sp"
                android:layout_gravity="end|center_vertical"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:orientation="horizontal">
            <com.sczn.wearlauncher.view.card.CardFragmentTextView
                android:id="@+id/depp_sleep_hours_text" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/normal_text"
                android:textSize="24sp"/>
            <com.sczn.wearlauncher.view.card.CardFragmentTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/deep_sleep_hours_unit"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:orientation="horizontal">
            <com.sczn.wearlauncher.view.card.CardFragmentTextView
                android:id="@+id/light_sleep_hours_text" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/normal_text"
                android:textSize="24sp"/>
            <com.sczn.wearlauncher.view.card.CardFragmentTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/light_sleep_hours_unit"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
